--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
 	},
 	"dependencies": {
 		"body-parser": "^1.15.2",
+		"boilerplate-project-messagebaord": "file:",
 		"chai": "^4.2.0",
 		"chai-http": "^3.0.0",
 		"cors": "^2.8.1",
 		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
 		"helmet": "^3.1.0",
-		"mocha": "^3.2.0"
+		"mocha": "^3.2.0",
+		"mongoose": "^8.9.2"
 	},
 	"repository": {
 		"type": "git",
